--- a/stylePratos.css
+++ b/stylePratos.css
@@ -28,8 +28,17 @@ body {
     align-content: center;
 }
 
-/* Botão "Adicionar Prato" */
 .add-prato {
+    font-size: 16px;
+    padding: 5px 10px;
+    color: white;
+    background-color: #ff9800;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.atz-prato{
     font-size: 16px;
     padding: 5px 10px;
     color: white;
@@ -42,6 +51,17 @@ body {
 .add-prato:hover {
     background-color: #e68900;
 }
+
+.atz-prato:hover {
+    background-color: #e68900;
+}
+
+.botoes-container {
+    display: flex;
+    gap: 10px; /* Espaçamento entre os botões */
+    align-items: center; /* Centraliza verticalmente os botões */
+}
+
 
 /* Cartão de prato */
 .card {
